samples/_failures_safe/1761715314_77d8a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abad0727.c: In function ‘main’:
./samples/SAFE/__tmp_abad0727.c:142:9: error: expected declaration or statement at end of input
  142 |         printf("Operation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_abad0727.c:142:9: error: expected declaration or statement at end of input
